--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,43 +1,33 @@
-body{
+body {
     padding: 0px;
     margin: 0px;
-    background: #DFDFE3;
-    font-family: verdana, 'sans-serif';
+    background: #dfdfe3;
+    font-family: verdana, "sans-serif";
     text-align: justify;
     box-sizing: border-box;
 }
-.header{
-    
-    /* background-color: #cfcfd3b6; */
+.header {
     display: flex;
-    /* line-height: 20px; */
-    /* justify-content: space-between; */
     line-height: 30px;
 }
-header > div{
+header > div {
     margin-top: 0px;
 }
-#head{
+#head {
     display: none;
 }
-.logo{
+.logo {
     flex: 3;
     line-height: 30px;
 }
-@font-face {
-    /* font-family: nextFont;
-    src: url(nextFont.ttf); */
-}
-.logo a{
+.logo a {
     line-height: 50px;
     margin-left: 10px;
     font-size: 22px;
-    font-family: Verdana, 'Geneva', Tahoma, sans-serif;
-
+    font-family: Verdana, "Geneva", Tahoma, sans-serif;
 }
-.nav-base{
+.nav-base {
     display: none;
-    
 }
 #menu-base {
     color: black;
@@ -48,49 +38,30 @@ header > div{
     font-size: 22px;
 }
 .carousel .carousel-item {
-    height: 25rem;
-  }
-.search{
-    /* flex: 1; */
+    height: 30rem;
 }
-.person{
+.person {
     display: none;
 }
-/* nav ul li:nth-child(4) i{
-    font-size: 20px;
-}
-
-nav ul li:nth-child(3) i {
-    font-size: 20px;
-    background: #000;
-}
-nav ul li:nth-child(2) i{
-    font-size: 20px;
-    display: block;
-}
-nav ul .nav-item a{
-    font-size: 12px;
-    padding: 9px;
-} */
-.h4{
+.h4 {
     font-size: 13px;
 }
-.h6{
+.h6 {
     font-size: 12px;
 }
-#input-search{
+#input-search {
     display: none;
     border: 0px;
     border: 1px solid grey;
     font-size: 13px;
 }
-.hiden{
+.hiden {
     display: none;
 }
-.show{
+.show {
     display: block;
 }
-.menu-bar{
+.menu-bar {
     background-color: #fff;
     color: gray;
     position: fixed;
@@ -101,10 +72,10 @@ nav ul .nav-item a{
     text-align: center;
     display: flex;
 }
-.menu-bar>div{
-    flex:1;
+.menu-bar > div {
+    flex: 1;
 }
-.menu-bar>div i{
+.menu-bar > div i {
     font-size: 26px;
 }
 #slider {
@@ -113,148 +84,144 @@ nav ul .nav-item a{
     overflow: hidden;
 }
 @keyframes slider {
-    0%{
-      left: 0;
+    0% {
+        left: 0;
     }
-    10%{
-      left: 0;
+    10% {
+        left: 0;
     }
-    20%{
-      left: -100%;
+    20% {
+        left: -100%;
     }
-    30%{
-      left: -100%;
+    30% {
+        left: -100%;
     }
-    40%{
-      left: -200%;
+    40% {
+        left: -200%;
     }
-    50%{
-      left: -200%;
+    50% {
+        left: -200%;
     }
-    60%{
-      left: -300%;
+    60% {
+        left: -300%;
     }
-    70%{
-      left: -300%;
+    70% {
+        left: -300%;
     }
-    80%{
-      left: -400%;
+    80% {
+        left: -400%;
     }
-    90%{
-      left: -400%;
+    90% {
+        left: -400%;
     }
-    100%{
-      left:0;
+    100% {
+        left: 0;
     }
 }
-#slider figure img{
+#slider figure img {
     float: left;
     width: 20%;
     text-align: center;
 }
-#slider figure{
+#slider figure {
     position: relative;
     width: 500%;
     animation: slider 10s infinite;
 }
-.category::-webkit-scrollbar{
-    width:0%;
+.category::-webkit-scrollbar {
+    width: 0%;
 }
-.category > div{
-    /* margin: 2px; */
+.category > div {
     box-sizing: border-box;
     display: block;
-    
 }
-.category-item{
+.category-item {
     padding-top: 5px;
     text-align: center;
-   display: block;
+    display: block;
     min-width: 70px;
-    height: 100px;
-    
+    height: 150px !important;
 }
-.category-item img{
-    width: 50px;
-    height: 50px;
+.category-item img {
+    width: 40px;
+    height: 40px;
     border-radius: 50px;
     background: #000;
 }
-.category-item h6{
+.category-item h6 {
     font-size: 12px;
     text-transform: uppercase;
     margin-top: 5px;
     float: right;
 }
-.ads{
+.ads {
     box-sizing: border-box;
 }
 
-.ads-item{
+.ads-item {
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 70% 1fr 1fr;
     font-size: 12px !important;
 }
-.ads-item .photo{
+.ads-item .photo {
     grid-row: 1/2;
     grid-column: 1/4;
 }
-.ads-item .photo img{
+.ads-item .photo img {
     width: 100%;
     height: 100%;
 }
-.ads-item .ti-pri{
+.ads-item .ti-pri {
     grid-row: 2/3;
     grid-column: 1/4;
     display: flex;
     line-height: 30px;
-    border: 1px  solid gray;
+    border: 1px solid gray;
     border-bottom: 1px;
 }
-.ads-item .ti-pri> div:first-child{
+.ads-item .ti-pri > div:first-child {
     flex: 1;
     padding-left: 5px;
 }
-.ads-item .ti-pri>div:last-child{
+.ads-item .ti-pri > div:last-child {
     padding-right: 5px;
 }
 
-.ads-item .foot{
+.ads-item .foot {
     grid-row: 3/4;
     grid-column: 1/4;
     box-sizing: border-box;
-    border: 1px  solid gray;
-    border-top: 0px
+    border: 1px solid gray;
+    border-top: 0px;
 }
-.foot .discount{
+.foot .discount {
     position: absolute;
     top: 0px;
     right: 15px;
     padding: 6px;
-    background-color: rgb(119, 172, 241,.3) !important;
+    background-color: rgb(119, 172, 241, 0.3) !important;
     text-transform: uppercase;
     border-radius: 0px 0px 0px 10px;
     font-weight: bolder;
-
 }
-.ads-item .foot> .location{
-   width: 70%;
-   float: left;
-   padding-right:50px ;
+.ads-item .foot > .location {
+    width: 70%;
+    float: left;
+    padding-right: 50px;
 }
-.ads-item .foot> .location ul li i{
+.ads-item .foot > .location ul li i {
     font-size: 12px;
- }
+}
 
-.ads-item .foot > .stock{
+.ads-item .foot > .stock {
     width: 30%;
     float: right;
     line-height: 35px;
     padding: 0px 20px;
 }
-.ads-item .foot > .stock ul li{
+.ads-item .foot > .stock ul li {
     border-radius: 100px;
     width: 25px;
     height: 25px;
@@ -262,74 +229,73 @@ nav ul .nav-item a{
     margin-top: 5px;
 }
 
-footer{
+footer {
     margin-top: 30px;
     padding-bottom: 50px;
     background: snow;
     font-size: 13px;
 }
-footer >div p{
+footer > div p {
     background-color: red;
 }
-.search{
-     display: none;
+.search {
+    display: none;
     font-weight: 25px;
-    
 }
-.search input{
+.search input {
     size: 30;
     background: #eee;
     border-radius: 0px 50px 50px 0px;
     border: 1px solid gray;
     padding-left: 10px;
 }
-@media  screen and (min-width:731px){
-    .logo img{
+@media screen and (min-width: 731px) {
+    .logo img {
         width: 100px;
         position: fixed;
         top: 0px;
-        left:20px;
+        left: 20px;
         height: 0px;
     }
-    .ads-item .foot{
+    .ads-item .foot {
         margin-bottom: -10px;
     }
-    .menu-bar{
+    .menu-bar {
         display: none;
     }
-    footer{
+    footer {
         padding: 0px;
     }
-    header{
+    header {
         justify-content: flex-end;
     }
-    .logo{
+    .logo {
         flex: 1;
     }
-    .search{
+    .search {
         flex: 1;
     }
-    .person{
+    .person {
         display: block;
     }
-    nav{
+    nav {
         flex: 2;
     }
-    .btn-search{
+    .btn-search {
         display: none;
     }
-    nav ul li:last-child i{
+    nav ul li:last-child i {
         font-size: 26px;
     }
-    .h4{
+    .h4 {
         font-size: 23px;
         font-weight: 800;
     }
-    #input-search{
+    #input-search {
         display: block;
     }
-    .category-item{
-        line-height: 100px;
+    .category-item {
+        line-height: 50px;
     }
     #slider {
         max-width: 100vw;
@@ -339,59 +305,38 @@ footer >div p{
     #slider figure img {
         text-align: center;
     }
-} 
+}
 /* DESKTOP */
- @media  screen  and (min-width:1200px){
-    /* nav ul li:nth-of-type(3) a, ul li:nth-of-type(4) a {
-        padding: none;
-        font-size: 16px;
-    }
-    nav ul {
-        justify-content: flex-end;
-        align-content: space-between;
-        margin-right: 30px;
-    }
-    nav ul li{
-        margin-right: 15px;
-    }
-    .search input[type='search']{
-        width: 90%;
-        margin: auto;
-    }
-    .logo{
-        flex: 1;
-    } */
-    #mycarousel{
+@media screen and (min-width: 1200px) {
+    #mycarousel {
         background-image: url("{% static 'images/prom.jpg'%}");
     }
-    header{
+    header {
         margin-top: 0px;
-        
     }
-    #head{
+    #head {
         display: inline-flex;
         position: relative;
         background: white;
         width: 100%;
     }
-    #head a{
+    #head a {
         padding-left: 50px;
         margin-right: 0px;
         text-align: center;
-        color: rgb(81, 81, 81,0.5);
-        font-size: 12px;
+        color: rgb(81, 81, 81, 0.5);
+        font-size: 12px;    
     }
-    #head .contact-head{
+    #head .contact-head {
         position: absolute;
-        right: 10px;
+        right:  10px;
     }
-    .logo a{
+    .logo a {
         line-height: 50px;
         margin-left: 10px;
         font-size: 30px;
-    
     }
-    .nav-base{
+    .nav-base {
         display: flex;
         justify-content: flex-end;
         text-transform: uppercase;
