--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -12,18 +12,17 @@
         background-size: cover;
         background-attachment: scroll;
         height: 35vh;
-        border-bottom: 0px solid #000;
     }
     .row > div:last-child{
         height: 60vh;
         margin-top: 10px;
     }
     .row > div:last-child >div{
-      line-height: 50px;
+        line-height: 50px;
     }
     .row > div:last-child > div i{
         font-size: 18px;
-      }
+    }
     .profile-photo img{
         border-radius: 100px;
         text-align: center;
@@ -43,37 +42,35 @@
         }
         .h3{
             font-size: 20px;
-
         }
         .row > div:first-child{
             background-image: url('{% static "images/2.jpg" %}');
             background-position: center;
             background-size: cover;
             background-attachment: scroll;
-            height: 50vh;
+            height: 40vh;
             border-bottom: 0px solid #000;
-        }
-        .row > div:last-child{
-            height: 60vh;
-            margin-top: 10px;
+            padding-top: 30px;
+            z-index: 1;
         }
         .row > div:last-child >div{
-          line-height: 50px;
+            line-height: 50px;
         }
         .row > div:last-child > div i{
             font-size: 25px;
             margin-right: 0px;
-          }
+        }
         .profile-photo img{
             border-radius: 200px;
-            text-align: center;
-            width: 250px;
-            height: 250px;
+            text-align: left;
+            width: 200px;
+            height: 200px;
+            border: 3px solid pink;
         }
         .profile-name{
             font-size: 18px;
-            border-radius: 0px;
             padding: 5px 50px;
+            text-align: center;
         }
     }
 </style>
@@ -83,13 +80,13 @@
                 <div class="profile-photo mt-0" style="text-align: center;">
                     <a href="/" class="nav-link h3"><i class="bi-chevron-left mr-4 text-light" style="position: absolute;left: 10px;"></i></a>
                     <img src="{{user.picture.url}}" alt="Profile Picture">
-                    <br class="br "> 
-                    <h6 class="h6 btn btn-primary mt-2 profile-name">
+                    <h6 class="h6 btn btn-primary mt-2">
                         {{user.first_name}}-{{user.last_name}}
                     </h6>
+                    <br class="br "> 
                 </div>
             </div>
-            <div class="container col-12  bg-light pb-4 pt-1" style="">
+            <div class="container col-12  bg-light pb-4 pt-4" style="">
                 <div class="d-flex flex-column bd-highlight">
                     <div class="p-2 bd-highlight" style="border-bottom: 2px solid #ccc;"><i class="bi-list-ul  p-2"> <span class="p-4"> <a href="{% url 'Item:my-ads' %}">My Ads</a></span></i> </div>
                     <div class="p-2 bd-highlight" style="border-bottom: 2px solid #ccc;"><i class="bi bi-signpost-2  p-2"> <span class="p-4"> <a href="#">Promote my Product</a></span></i> </div>
