--- a/Item/templates/item/add-item.html
+++ b/Item/templates/item/add-item.html
@@ -85,18 +85,28 @@
         </section>
     </div>
 </main>
-<div class=" " >
-    <strong>
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li {% if nessage.tags %} class="alert alert-{{message.tags}} alert-dismissible fade show bg-success fw-normal" role="alert" {% endif%}>
-                    {{message}}
-                </li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    </strong> 
+<!-- <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button> -->
+
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <img src="..." class="rounded me-2" alt="...">
+            <strong class="me-auto">Bootstrap</strong>
+            <small>11 mins ago</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+            <div class="toast-body">
+                {% if messages %}
+                    <!-- <ul class="messages"> -->
+                        {% for message in messages %}
+                        <!-- <li {% if nessage.tags %} class="alert alert-{{message.tags}} alert-dismissible fade show bg-success fw-normal" role="alert" {% endif%}> -->
+                            {{message}}
+                        <!-- </li> -->
+                        {% endfor %}
+                    <!-- </ul> -->
+                {% endif %}
+            </div>
+    </div>
 </div>
 <script type="text/javascript">
     function findSize(){
