--- a/Item/templates/partial/base.html
+++ b/Item/templates/partial/base.html
@@ -38,6 +38,8 @@ referrerpolicy="no-referrer"></script>
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <title>nextMarket {% block title%}{% endblock%}</title>
 </head>
@@ -80,61 +82,7 @@ body {
     height: 32rem;
     object-fit: fill;
     
-  }/*
-  
-  
-  /* MARKETING CONTENT
-  -------------------------------------------------- */
-  
-  /* Center align the text within the three columns below the carousel */
-  /*.marketing .col-lg-4 {
-    margin-bottom: 1.5rem;
-    text-align: center;
   }
-  .marketing h2 {
-    font-weight: 400;
-  }
-  .marketing .col-lg-4 p {
-    margin-right: .75rem;
-    margin-left: .75rem;
-  }
-  
-  
-  /* Featurettes
-  ------------------------- */
-  
-  /*.featurette-divider {
-    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
-  /*}
-  
-  /* Thin out the marketing headings */
- /* .featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-  }
-  
-  
-  /* RESPONSIVE CSS
-  -------------------------------------------------- */
-  
-  /*@media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    /*.carousel-caption p {
-      margin-bottom: 1.25rem;
-      font-size: 1.25rem;
-      line-height: 1.4;
-    }
-  
-    .featurette-heading {
-      font-size: 50px;
-    }
-  }
-  
-  @media (min-width: 62em) {
-    .featurette-heading {
-      margin-top: 7rem;
-    }
-  }*/
 </style>
 <body class="">
     <div id="head">
@@ -154,16 +102,10 @@ body {
     <header class="header">
         <div class="logo">
             <a href="/">
-                <!-- <img src="{% static 'images/next-1.png' %}" alt="logo" sizes="" srcset="" > -->
                 <img class="ui right spaced avatar image" src="{% static 'images/logo.png'%}" style="background-color: black;">
                 Next Market
             </a>
         </div>
-        <!-- <div class="search">
-            <form action="" method="get">
-                <input class="ml-2" type="search" name="search" id="input-search" placeholder="Search any Thing" size="40">
-            </form>
-        </div> -->
         <nav class="nav-base" style="">
           <div class="ui large secondary pointing menu right" style="line-height:30px">
             <a class="item active" href="/">
@@ -195,19 +137,6 @@ body {
         <div id="menu-base">
           <i class="align right icon"></i>
         </div>
-        <!-- <nav class="pb-4">
-            <ul class="nav">
-                <li class="nav-item btn-search"><a href="" class="nav-link"><i class="bi-search" ></i></a></li>
-                <li class="nav-item"><a href="{% url 'Item:add-item' %}" class="nav-link"><i class="bi-badge-ad-fill " ></i></a></li>
-                {% if  request.user.is_authenticated  %}
-                    <li class="nav-item"><a href="{% url 'account_logout' %}" class="nav-link">LOGOUT</a></li>
-                {% else %}
-                    <li class="nav-item"><a href="{% url 'account_signup' %}" class="nav-link">SIGNUP</a></li>
-                    <li class="nav-item"><a href="{% url 'account_login' %}" class="nav-link">SIGNIN</a></li>
-                {% endif%}
-                    <li class="nav-item person"><a href="{% url 'Item:profile' %}" class="nav-link"><i class="bi-person-circle" ></i></a></li>
-            </ul>
-        </nav> -->
     </header>
     {% block content%}
 
@@ -221,23 +150,13 @@ body {
     <div class="menu-bar mt-4">
         <div>
             <a href="/" class="nav-link"><i class="bi-house" ></i></a>
-            <!-- <h5 class="h6 m-0">
-                HOME
-            </h5> -->
         </div>
         <div>
             <a href="{% url 'Item:add-item' %}" class="nav-link"><i class="bi-plus-circle" ></i></a>
-            <!-- <h5 class="h6">
-                SELL
-            </h5> -->
         </div>
         <div>
         <a href="{% url 'Item:profile' %}" class="nav-link"><i class="bi-person-circle" ></i></a>
-            <!-- <h5 class="h6">
-                PROFILE
-            </h5> -->
         </div>
-        
     </div>
 
     <script 
