--- a/Item/templates/item/index.html
+++ b/Item/templates/item/index.html
@@ -1,7 +1,7 @@
 {% extends 'partial/base.html' %}
 {% load static %}
 {% block content%}
-        <div id="myCarousel" class="carousel slide w-md-100" data-bs-ride="carousel">
+        <div id="myCarousel" class="carousel slide w-md-100 p-0 m-0" data-bs-ride="carousel">
             <div class="carousel-indicators">
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -56,7 +56,7 @@
             </button>
         </div>
     <main class="container-fluid w-lg-100 w-100">
-        <div class="category">
+        <div class="category m-0">
             <div class="h3">
                 Category ads
             </div>
