--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,9 @@ body {
     text-align: justify;
     box-sizing: border-box;
 }
+* > body a{
+    text-decoration: none;
+}
 .header {
     display: flex;
     line-height: 30px;
@@ -78,7 +81,7 @@ header > div {
 .menu-bar > div i {
     font-size: 26px;
 }
-#slider {
+/* #slider {
     max-width: 100vw;
     max-height: 150px;
     overflow: hidden;
@@ -127,7 +130,7 @@ header > div {
     position: relative;
     width: 500%;
     animation: slider 10s infinite;
-}
+} */
 .category::-webkit-scrollbar {
     width: 0%;
 }
@@ -140,7 +143,7 @@ header > div {
     text-align: center;
     display: block;
     min-width: 70px;
-    height: 150px !important;
+    height: 60px !important;
 }
 .category-item img {
     width: 40px;
@@ -153,6 +156,7 @@ header > div {
     text-transform: uppercase;
     margin-top: 5px;
     float: right;
+    display: none;
 }
 .ads {
     box-sizing: border-box;
@@ -343,5 +347,14 @@ footer > div p {
     }
     #menu-base {
         display: none;
+    }
+    .category-item h6{
+        display: block;
+    } 
+    .category-item h6 a{
+        text-decoration: none;
+    }
+    .category-item {
+        height: 150px !important;
     }
 }
