--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -36,36 +36,26 @@
 </style>
 <main>
     <div class="container">
-      <section class="mb-4">
+    <section class="mb-4">
         <div class="row wow fadeIn">
             <div class="col-12 col-lg-4 m-auto p-4" style="border: 1px solid gray; box-shadow: 3px 3px 10px #888888;border-radius: 5px;">
-    
                 <h1>{% trans "Sign In" %}</h1><hr>
-        
                 {% get_providers as socialaccount_providers %}
-        
                 {% if socialaccount_providers %}
                 <p style="font-size: 14px;">{% blocktrans with site.name as site_name %}Please sign in with you Social media accounts. 
                     Or, <a href="{{ signup_url }}">sign up</a>
                 With your own credential:{% endblocktrans %}</p>
-                
-        
                 <div class="socialaccount_ballot">
-                    
-                    <ul class="socialaccount_providers mr-0">
+                    <ul class="socialaccount_providers mr-0" style="color: white !important;">
                         {% include "socialaccount/snippets/provider_list.html" with process="login" %}
                     </ul>
                     <div class="login-or ">{% trans 'or' %}</div>
-        
                 </div>
-        
                 {% include "socialaccount/snippets/login_extra.html" %}
-        
                 {% else %}
                 <p>{% blocktrans %}If you have not created an account yet, then please
                 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
                 {% endif %}
-        
                 <form class="login" method="POST" action="{% url 'account_login' %}">
                     {% csrf_token %}
                     {{ form|crispy }}
@@ -77,8 +67,7 @@
                 </form>
             </div>
         </div>
-        </section>
+    </section>
     </div>
 </main>
-
 {% endblock %}
